@@ -20,12 +20,12 @@ import java.util.*;
 import java.util.function.BiConsumer;
 
 public class WarManager {
-    public static int TIME_PREPARATION = 5; // in minutes
-    public static int TIME_FIGHT = 30; // in minutes
+    public static final int TIME_PREPARATION = 5; // in minutes
+    public static final int TIME_FIGHT = 30; // in minutes
 
-    public static long CITY_LOSER_IMMUNITY_FIGHT_COOLDOWN = 2 * 24 * 60 * 60 * 1000L; // 2 jours en millisecondes
-    public static long CITY_WINNER_IMMUNITY_FIGHT_COOLDOWN = 24 * 60 * 60 * 1000L; // 1 jours en millisecondes
-    public static long CITY_DRAW_IMMUNITY_FIGHT_COOLDOWN = 12 * 60 * 60 * 1000L; // 12 heures en millisecondes
+    public static final long CITY_LOSER_IMMUNITY_FIGHT_COOLDOWN = 2 * 24 * 60 * 60 * 1000L; // 2 jours en millisecondes
+    public static final long CITY_WINNER_IMMUNITY_FIGHT_COOLDOWN = 24 * 60 * 60 * 1000L; // 1 jours en millisecondes
+    public static final long CITY_DRAW_IMMUNITY_FIGHT_COOLDOWN = 12 * 60 * 60 * 1000L; // 12 heures en millisecondes
 
     public static final Map<String, War> warsByAttacker = new HashMap<>();
     public static final Map<String, War> warsByDefender = new HashMap<>();
@@ -59,6 +59,7 @@ public class WarManager {
 
     /**
      * Retrieves the war associated with a given city UUID.
+     *
      * @param cityUUID The UUID of the city.
      * @return The War object if found, null otherwise.
      */
@@ -74,6 +75,7 @@ public class WarManager {
 
     /**
      * Starts a war between two cities.
+     *
      * @param attacker The city that is attacking.
      * @param defender The city that is defending.
      * @param attackers The list of UUIDs of the players in the attacking city.
@@ -94,9 +96,9 @@ public class WarManager {
      * @param war The War object representing the war to be ended.
      */
     public static void endWar(War war) {
-        War warRemoved;
-        warRemoved = warsByAttacker.remove(war.getCityAttacker().getUUID());
-        warRemoved = warsByDefender.remove(war.getCityDefender().getUUID());
+        War warRemoved = warsByAttacker.remove(war.getCityAttacker().getUUID());
+        if (warRemoved == null)
+            warRemoved = warsByDefender.remove(war.getCityDefender().getUUID());
 
         if (warRemoved == null) return;
 
@@ -213,16 +215,16 @@ public class WarManager {
 
         if (reason == WinReason.DRAW) {
             String message = String.format("""
-                    §8§m                                                     §r
-                    §7
-                    §c§lGUERRE!§r §7C'est la fin des combats!§7
-                    §8§oIl y a eu égalité !
-                    §7
-                    §7Statistiques globales:
-                    §7 - §cKills de %s : §f%d
-                    §7 - §9Kills de %s : §f%d
-                    §7
-                            §8§m                                                     §r""",
+                            §8§m                                                     §r
+                            §7
+                            §c§lGUERRE!§r §7C'est la fin des combats!§7
+                            §8§oIl y a eu égalité !
+                            §7
+                            §7Statistiques globales:
+                            §7 - §cKills de %s : §f%d
+                            §7 - §9Kills de %s : §f%d
+                            §7
+                                    §8§m                                                     §r""",
                     war.getCityAttacker().getName(), killsWinner, war.getCityDefender().getName(), killsLoser);
 
 
@@ -407,7 +409,7 @@ public class WarManager {
             }
             if (!borderChunks.isEmpty()) {
                 Collections.shuffle(borderChunks);
-                BlockVector2 seed = borderChunks.get(0);
+                BlockVector2 seed = borderChunks.getFirst();
 
                 loser.removeChunk(seed.getX(), seed.getZ());
                 winner.addChunk(seed.getX(), seed.getZ());
